k8s-demo-platform/apps/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-default-deny-ingress
  namespace: app
spec:
  podSelector: {}
  policyTypes: ["Ingress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-allow-internal-ingress
  namespace: app
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
        - namespaceSelector:
            matchLabels:
              name: observability
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
  policyTypes: ["Ingress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-allow-egress
  namespace: app
spec:
  podSelector: {}
  policyTypes: ["Egress"]
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 6432
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 4318
